🚧 rename TV show root and episodes independently